--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-solhint": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.3.1",
-    "hardhat": "^2.3.3"
+    "hardhat": "^2.3.3",
+    "hardhat-contract-sizer": "^2.0.3",
+    "hardhat-gas-reporter": "^1.0.4",
+    "mocha": "^9.0.0"
   },
   "scripts": {
-    "compile": "npx hardhat compile",
-    "test": "npx hardhat test"
+    "compile": "hardhat compile",
+    "test": "hardhat test",
+    "size": "hardhat size-contracts",
+    "check": "hardhat check"
   }
 }
