--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "dwork.link",
   "dependencies": {
-    "@openzeppelin/contracts": "^4.1.0"
+    "@openzeppelin/contracts": "^4.1.0",
+    "hardhat-typechain": "^0.3.5",
+    "ts-generator": "^0.1.1",
+    "typechain": "^5.0.0",
+    "typescript": "^4.3.3"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
