--- a/package.json
+++ b/package.json
@@ -4,20 +4,24 @@
     "@openzeppelin/contracts": "^4.1.0",
     "hardhat-typechain": "^0.3.5",
     "ts-generator": "^0.1.1",
-    "typechain": "^5.0.0",
-    "typescript": "^4.3.3"
+    "typechain": "^5.0.0"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-solhint": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@types/chai": "^4.2.18",
+    "@types/mocha": "^8.2.2",
+    "@types/node": "^15.12.3",
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.3.1",
     "hardhat": "^2.4.0",
     "hardhat-contract-sizer": "^2.0.3",
     "hardhat-gas-reporter": "^1.0.4",
-    "mocha": "^9.0.0"
+    "mocha": "^9.0.0",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.4"
   },
   "scripts": {
     "compile": "hardhat compile",
