--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "dwork.link",
   "dependencies": {
     "@openzeppelin/contracts": "^4.1.0",
-    "hardhat-typechain": "^0.3.5",
+    "@typechain/ethers-v5": "^7.0.1",
+    "@typechain/hardhat": "^2.1.0",
+    "@typechain/truffle-v5": "^5.0.0",
+    "@typechain/web3-v1": "^3.0.0",
     "ts-generator": "^0.1.1",
-    "typechain": "^5.0.0"
+    "typechain": "4.0.0"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
@@ -16,8 +19,10 @@
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.3.1",
-    "hardhat": "^2.4.0",
+    "hardhat": "^2.4.1",
     "hardhat-contract-sizer": "^2.0.3",
+    "hardhat-deploy": "^0.8.9",
+    "hardhat-deploy-ethers": "^0.3.0-beta.10",
     "hardhat-gas-reporter": "^1.0.4",
     "mocha": "^9.0.0",
     "ts-node": "^10.0.0",
@@ -27,6 +32,7 @@
     "compile": "hardhat compile",
     "test": "hardhat test",
     "size": "hardhat size-contracts",
-    "check": "hardhat check"
+    "check": "hardhat check",
+    "deploy-stage": "node scripts/deploy.js"
   }
 }
