--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.1.0",
     "@typechain/ethers-v5": "^7.0.1",
-    "@typechain/hardhat": "^2.1.0",
+    "@typechain/hardhat": "^2.2.0",
     "@typechain/truffle-v5": "^5.0.0",
     "@typechain/web3-v1": "^3.0.0",
-    "ts-generator": "^0.1.1",
-    "typechain": "4.0.0"
+    "ts-generator": "^0.1.1"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-solhint": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
     "@types/chai": "^4.2.18",
     "@types/mocha": "^8.2.2",
     "@types/node": "^15.12.3",
@@ -20,12 +20,14 @@
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.3.1",
     "hardhat": "^2.4.1",
+    "hardhat-abi-exporter": "^2.2.1",
     "hardhat-contract-sizer": "^2.0.3",
     "hardhat-deploy": "^0.8.9",
     "hardhat-deploy-ethers": "^0.3.0-beta.10",
     "hardhat-gas-reporter": "^1.0.4",
     "mocha": "^9.0.0",
     "ts-node": "^10.0.0",
+    "typechain": "^5.1.2",
     "typescript": "^4.3.4"
   },
   "scripts": {
